--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,22 +1,31 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
       <a class="navbar-brand" routerLink="home">Effects</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+
+
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
+
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item"> 
-            <a class="nav-link active" aria-current="page" routerLink="home">Home</a>
+          <li routerLinkActive="active" class="nav-item" > 
+            <a class="nav-link" routerLink="home">Home</a>
           </li>
-          <li class="nav-item">
+
+          <li routerLinkActive="active" class="nav-item" >
             <a class="nav-link" routerLink="usuario/1">Usuario</a>
           </li>
         </ul>
-        <form class="d-flex">
-          <input class="form-control me-2" type="search" placeholder="ID usuario" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Buscar</button>
-        </form>
+
+        <div class="d-flex">
+          <input #txtInput 
+                 (keyup.enter)="irUsuario( txtInput.value )"
+                 class="form-control me-2" 
+                 type="search" 
+                 placeholder="ID usuario">
+          <button (click)="irUsuario( txtInput.value )" 
+                  class="btn btn-outline-success" 
+                  type="button">Buscar</button>
+        </div>
       </div>
+
     </div>
   </nav>
