--- a/src/app/usuarios/usuario/usuario.component.html
+++ b/src/app/usuarios/usuario/usuario.component.html
@@ -1,1 +1,14 @@
-<p>usuario works!</p>
+
+<div class="row">
+    <div class="col-4">
+        <img [src]="usuario?.avatar" alt="imagenAvatar" class="img-thumbnail">
+    </div>
+
+    <div class="col">
+        <ul class="list-group">
+            <li class="list-group-item"><b>Nombre: </b> {{ usuario?.first_name }}</li>
+            <li class="list-group-item"><b>Apellido: </b> {{ usuario?.last_name }}</li>
+        </ul>
+    </div>
+
+</div>
